--- a/app/public/index.ejs
+++ b/app/public/index.ejs
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
   <head>
     <meta charset="utf-8">
-    <title>链路追踪平台</title>
+    <title>后台管理系统</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1181069_8h2ho7kir1n.css">
   </head>
   <body>
